<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutAddNewLocation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.toptoche.sample.MainActivity">

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/locationsSpinner"
                android:layout_width="252dp"
                android:layout_height="43dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.555"
                app:layout_constraintStart_toEndOf="@+id/textViewLocationName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewLocationName"
                android:layout_width="113dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:gravity="center_vertical"
                android:text="@string/location_name"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/continentsSpinner"
                android:layout_width="252dp"
                android:layout_height="43dp"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="8dp"
                android:entries="@array/continents_array"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewContinent"
                app:layout_constraintTop_toBottomOf="@+id/locationsSpinner" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/countriesSpinner"
                android:layout_width="252dp"
                android:layout_height="43dp"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textViewCountry"
                app:layout_constraintTop_toBottomOf="@+id/continentsSpinner" />

            <TextView
                android:id="@+id/textViewContinent"
                android:layout_width="113dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="56dp"
                android:gravity="center_vertical"
                android:text="@string/continent"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewLocationName" />

            <TextView
                android:id="@+id/textViewCountry"
                android:layout_width="113dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="52dp"
                android:gravity="center_vertical"
                android:inputType="text"
                android:text="@string/country"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewContinent" />

            <TextView
                android:id="@+id/textViewState"
                android:layout_width="113dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:gravity="center_vertical"
                android:text="@string/state"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewCountry" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerStates"
                android:layout_width="252dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toEndOf="@+id/textViewState"
                app:layout_constraintTop_toBottomOf="@+id/countriesSpinner"
                app:layout_constraintVertical_bias="0.009" />

            <!--from here-->

            <TextView
                android:id="@+id/textViewDistrict"
                android:layout_width="113dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:gravity="center_vertical"
                android:text="@string/district"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewState" />

            <!--up to here-->

            <TextView
                android:id="@+id/textViewNearestCities"
                android:layout_width="113dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:gravity="center_vertical"
                android:text="@string/nearest_cities"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDistrict"/>

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerNearestCities"
                android:layout_width="252dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toEndOf="@+id/textViewNearestCities"
                app:layout_constraintTop_toBottomOf="@+id/spinnerDistrict"
                app:layout_constraintVertical_bias="0.009" />

            <TextView
                android:id="@+id/textViewDistanceFromBangalore"
                android:layout_width="133dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:gravity="center_vertical"
                android:text="@string/distance_from_bangalore"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNearestCities"/>


            <!--GHJ-->

            <EditText
                android:id="@+id/editTextDistanceFromBangalore"
                android:layout_width="140dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/textViewDistanceFromBangalore"
                app:layout_constraintTop_toBottomOf="@+id/spinnerNearestCities" />

            <TextView
                android:id="@+id/textViewKMBangalore"
                android:layout_width="63dp"
                android:layout_height="43dp"
                android:layout_marginTop="48dp"
                android:gravity="center_vertical"
                android:text="@string/km_bangalore"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.34"
                app:layout_constraintStart_toEndOf="@+id/editTextDistanceFromBangalore"
                app:layout_constraintTop_toBottomOf="@+id/spinnerNearestCities" />

            <TextView
                android:id="@+id/textViewDistanceFromHome"
                android:layout_width="133dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:gravity="center_vertical"
                android:text="@string/distance_from_home"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDistanceFromBangalore"/>

            <EditText
                android:id="@+id/editTextDistanceFromHome"
                android:layout_width="140dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintStart_toEndOf="@+id/textViewDistanceFromHome"
                app:layout_constraintTop_toBottomOf="@+id/editTextDistanceFromBangalore" />

            <TextView
                android:id="@+id/textViewKMHome"
                android:layout_width="63dp"
                android:layout_height="43dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical"
                android:text="@string/km_bangalore"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.516"
                app:layout_constraintStart_toEndOf="@+id/editTextDistanceFromHome"
                app:layout_constraintTop_toBottomOf="@+id/textViewKMBangalore" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/spinnerDistrict"
                android:layout_width="252dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.111"
                app:layout_constraintStart_toEndOf="@+id/textViewDistrict"
                app:layout_constraintTop_toBottomOf="@+id/spinnerStates" />

            <TextView
                android:id="@+id/textViewGoogleMapLocation"
                android:layout_width="133dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:gravity="center_vertical"
                android:text="@string/google_map_location"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDistanceFromHome"/>


            <EditText
                android:id="@+id/editTextGoogleMapLocation"
                android:layout_width="230dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/google_map_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.142"
                app:layout_constraintStart_toEndOf="@+id/textViewGoogleMapLocation"
                app:layout_constraintTop_toBottomOf="@+id/editTextDistanceFromHome"
                android:importantForAutofill="no"
                android:inputType="text" tools:targetApi="o"
                app:layout_constraintVertical_bias="0.009"/>

            <TextView
                android:id="@+id/textViewNearestTouristSpots"
                android:layout_width="133dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:gravity="center_vertical"
                android:text="@string/nearest_tourist_spots"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewGoogleMapLocation"/>


            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/nearestTouristSpotsSpinner"
                android:layout_width="230dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/textViewNearestTouristSpots"
                app:layout_constraintTop_toBottomOf="@+id/editTextGoogleMapLocation"
                app:layout_constraintVertical_bias="0.009" />

            <TextView
                android:id="@+id/textViewLocationDetails"
                android:layout_width="133dp"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="48dp"
                android:gravity="center_vertical"
                android:text="@string/locationDetails"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewNearestTouristSpots"/>


            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/locationDetailsSpinner"
                android:layout_width="230dp"
                android:layout_height="43dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="48dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/textViewLocationDetails"
                app:layout_constraintTop_toBottomOf="@+id/nearestTouristSpotsSpinner"
                app:layout_constraintVertical_bias="0.009" />


            <Button
                android:id="@+id/btn_submit_new_location"
                android:layout_width="230dp"
                android:layout_height="65dp"
                android:text="@string/btn_submit_location"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationDetailsSpinner">

            </Button>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>